--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailCamera"
             app:layout_constraintEnd_toEndOf="parent"
-            android:text="Detail Camera"
+            android:text="Login Vhome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
